appId: com.15158314786.jpvideo.dev
---
- launchApp
- assertVisible: "需要更新"
- assertVisible: "去 App Store 更新"
- tapOn: "去 App Store 更新"
